fixed overlay too large for image

--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@ img {
   opacity: 0;
   color: white;
   font-size: 20px;
-  padding: 20px;
   text-align: center;
 }
 
